--- a/public/html/notes.html
+++ b/public/html/notes.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <link href="./../css/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="col-8">
-                
+           
         <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
 
         <textarea class="note-textarea" placeholder="Note Text"></textarea>
@@ -41,7 +41,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="./index.js"></script>
+  <script src="./../js/index.js"></script>
 </body>
 
 </html>
